Fix overflown

--- a/render/base.scss
+++ b/render/base.scss
@@ -34,7 +34,7 @@ $contentPadding: 1em;
 	top: 0;
 	bottom: 0;
 	width: 100%;
-	overflow-x: unset;
+	overflow-x: hidden;
 	overflow-y: scroll;
 }
 
